--- a/main.css
+++ b/main.css
@@ -27,4 +27,7 @@ nav,output,ruby,section,summary,time,mark,audio,video {
 body {
     background-color: #e8dfce;
 }
-
+img {
+    display: block; 
+    margin: 0px auto;
+}
